--- a/doc-assets/index.css
+++ b/doc-assets/index.css
@@ -281,7 +281,9 @@ div.method:not(:last-of-type) {
 #search-results {
 	height: 0;
 	margin: 0;
-	transition: height 0.3s, margin 0.3s;
+	transition:
+		height 0.3s,
+		margin 0.3s;
 }
 
 #search-results.visible {
