--- a/force-app/main/default/components/BingoPerson.component
+++ b/force-app/main/default/components/BingoPerson.component
@@ -1,6 +1,8 @@
 <apex:component access="global">
 	<apex:attribute name="User" type="User" required="false" description="user" />
 	<center>
-		<apex:image id="UserImage" url="{!User.SmallPhotoUrl}" width="64px" height="64px" /><br /> <b> <apex:outputtext value="{!User.Name}" /></b>
+		<apex:image id="UserImage" url="{!User.SmallPhotoUrl}" width="64px" height="64px" />
+		<br />
+		<b><apex:outputtext value="{!User.Name}" /></b>
 	</center>
 </apex:component>
