--- a/force-app/main/default/components/BingoCard.component
+++ b/force-app/main/default/components/BingoCard.component
@@ -1,45 +1,45 @@
 <apex:component controller="BINGOController" access="global">
 	<center>
 		<table border="1" cellpadding="5">
-			<tr>
-				<th colspan="5" style="vertical-align: middle">
+			<tr class="cardrow">
+				<th colspan="5" style="vertical-align: middle" class="cardheader">
 					<center><apex:componentBody /></center>
 				</th>
 			</tr>
-			<tr>
-				<td><c:BingoPerson user="{!user1}" /></td>
-				<td><c:BingoPerson user="{!user2}" /></td>
-				<td><c:BingoPerson user="{!user3}" /></td>
-				<td><c:BingoPerson user="{!user4}" /></td>
-				<td><c:BingoPerson user="{!user5}" /></td>
+			<tr class="cardrow">
+				<td class="cardsquare"><c:BingoPerson user="{!user1}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user2}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user3}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user4}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user5}" /></td>
 			</tr>
-			<tr>
-				<td><c:BingoPerson user="{!user6}" /></td>
-				<td><c:BingoPerson user="{!user7}" /></td>
-				<td><c:BingoPerson user="{!user8}" /></td>
-				<td><c:BingoPerson user="{!user9}" /></td>
-				<td><c:BingoPerson user="{!user10}" /></td>
+			<tr class="cardrow">
+				<td class="cardsquare"><c:BingoPerson user="{!user6}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user7}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user8}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user9}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user10}" /></td>
 			</tr>
-			<tr>
-				<td><c:BingoPerson user="{!user11}" /></td>
-				<td><c:BingoPerson user="{!user12}" /></td>
-				<td><c:BingoPerson user="{!me}" /></td>
-				<td><c:BingoPerson user="{!user14}" /></td>
-				<td><c:BingoPerson user="{!user15}" /></td>
+			<tr class="cardrow">
+				<td class="cardsquare"><c:BingoPerson user="{!user11}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user12}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!me}" id="meimage" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user14}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user15}" /></td>
 			</tr>
-			<tr>
-				<td><c:BingoPerson user="{!user16}" /></td>
-				<td><c:BingoPerson user="{!user17}" /></td>
-				<td><c:BingoPerson user="{!user18}" /></td>
-				<td><c:BingoPerson user="{!user19}" /></td>
-				<td><c:BingoPerson user="{!user20}" /></td>
+			<tr class="cardrow">
+				<td class="cardsquare"><c:BingoPerson user="{!user16}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user17}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user18}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user19}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user20}" /></td>
 			</tr>
-			<tr>
-				<td><c:BingoPerson user="{!user21}" /></td>
-				<td><c:BingoPerson user="{!user22}" /></td>
-				<td><c:BingoPerson user="{!user23}" /></td>
-				<td><c:BingoPerson user="{!user24}" /></td>
-				<td><c:BingoPerson user="{!user25}" /></td>
+			<tr class="cardrow">
+				<td class="cardsquare"><c:BingoPerson user="{!user21}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user22}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user23}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user24}" /></td>
+				<td class="cardsquare"><c:BingoPerson user="{!user25}" /></td>
 			</tr>
 		</table>
 	</center>
