--- a/force-app/main/default/pages/BINGO.page
+++ b/force-app/main/default/pages/BINGO.page
@@ -6,16 +6,20 @@
 			<table border="0">
 				<tr>
 					<td width="200px">
-						<center><apex:commandLink value="{!$Label.New_BINGO_Card}" action="{!NewCard}" /></center>
+						<center>
+							<apex:commandLink value="{!$Label.New_BINGO_Card}" action="{!NewCard}" />
+						</center>
 					</td>
 					<td width="200px">
-						<center><apex:commandLink value="{!$Label.Show_as_PDF}" action="{!showAsPDF}" target="_blank" /></center>
+						<center>
+							<apex:commandLink value="{!$Label.Show_as_PDF}" action="{!showAsPDF}" target="_blank" />
+						</center>
 					</td>
 				</tr>
 			</table>
 		</apex:form>
 		<c:BingoCard>
-			<apex:image id="CollaborationCloud" url="{!URLFOR($Resource.ChatterBINGO, 'ChatterCloud.png')}" height="200" />
+			<apex:image id="CollaborationCloud" url="{!URLFOR($Resource.ChatterBINGO, 'ChatterCloud.png')}" height="200" alt="Collaboration Cloud logo" />
 		</c:BingoCard>
 	</center>
 </apex:page>
